Show header of popup

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/popup.css">
 </head>
 <body>
+<div class="header">
+    Dark theme for <span id="key">Page</span>
+</div>
 <ul class="theme_list">
     <li class="frame_theme none" data-theme="none">
         <span class="theme_title">No Theme</span>
@@ -26,7 +29,7 @@
         <span class="color color_three"></span>
     </li>
     <li class="frame_theme material" data-theme="material">
-        <span class="theme_title">Material Design</span>
+        <span class="theme_title">Material</span>
         <span class="color color_one"></span>
         <span class="color color_two"></span>
         <span class="color color_three"></span>
